fixed the gap between  header and the ion-slide

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,7 @@
 page-home {
+  ion-header{
+	height: 30px;
+  }
   .font{
 	color: #fff;
   }
